--- a/src/styles/PetShop.css
+++ b/src/styles/PetShop.css
@@ -202,10 +202,12 @@ h2 {
   padding: 20px;
 } 
 
-.language-switcher {
+.menu {
   position: absolute;
   top: 14px;
   right: 24px;
+  display: flex;
+  gap: 16px;
 }
 
 .not-found {
@@ -214,7 +216,8 @@ h2 {
 }
 
 .info-button {
-  position: absolute!important;
-  top: 10px;
-  right: 60px;
+  padding: 0!important ;
+  margin: 0!important;
+  min-width: 0!important;
+  background-color: transparent!important;
 }
